--- a/css/style.css
+++ b/css/style.css
@@ -800,6 +800,9 @@ align-items: baseline;}
     color: #000;
 }
 
+.contact{
+height:500px
+}
 
 
 /********************************************Adaptive-header***************************************/
